# ProteinClaw

./: .env.example  .gitattributes  .gitignore  .impeccable.md  AUDIT_REPORT.md  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  install.ps1  install.sh  package.json  proposal_aims.txt  pyproject.toml  temp_idea.txt
.claude/: settings.local.json
.github/workflows/: release.yml
cli-tui/: Cargo.toml
cli-tui/src/: app.rs  config.rs  copilot_auth.rs  events.rs  main.rs  registry.rs  server.rs  ui.rs  ws.rs
cli-tui/src/views/: main_view.rs  mod.rs  setup.rs
cli-tui/src/widgets/: command_popup.rs  footer.rs  header.rs  input.rs  mod.rs  sidebar.rs  transcript.rs  welcome.rs
cli-tui/tests/: smoke.rs
docs/: 2026-04-12-case-study-page-design.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  types.ts
harness/: runner.py
harness/runnable/: tool_tests.json
harness/test_skills/: SKILL.md
ideas/: Arabidopsis immunity protein analysis pipeline - Su.docx
logo/macos/: AppIcon.icns
proteinbox/api_literature/: literature.py  models.py
proteinbox/api_tools/: cath.py  cbioportal.py  chembl.py  clinvar.py  clustal_omega.py  dbsnp.py  disgenet.py  disprot.py  ebi_blast.py  elm.py  ensembl.py  ensembl_plants.py  expasy.py  gene_ontology.py  gnomad.py  gtex.py  gwas_catalog.py  intact.py  mobidb.py  ncbi_gene.py  omim.py  opentargets.py  panther.py  phosphosite.py  protein_atlas.py  reactome.py  uniprot_variants.py  wikipathways.py
proteinbox/tools/: alphafold.py  blast.py  interpro.py  kegg.py  pdb.py  pubmed.py  registry.py  sequence_analysis.py  string_db.py  uniprot.py
proteinclaw/: cli.py  config.py  main.py
proteinclaw/agent/: llm.py  loop.py
proteinclaw/api/: chat.py  tools.py
proteinclaw/cli/: app.py  renderer.py
proteinclaw/core/: config.py
proteinclaw/resources/: case-studies.json
proteinclaw/server/: case_studies.py  chat.py  feedback.py  main.py  tools.py
scripts/: backend-dev.sh  build-mac.sh  build-run-wsl-cli.sh  build-tui.sh  build-windows.ps1  build_macos_app.sh  build_macos_tui.sh  build_win_tui.ps1  debug-tui.ps1  debug-tui.sh  dev-web-windows.ps1  dev-windows.ps1  dev.sh  frontend-dev.sh  run_backend.sh  run_frontend.ps1  run_frontend.sh  run_tui.ps1  run_tui.sh  test-cli.ps1  test-cli.sh  test-tools.sh  test.sh  tui.ps1  tui.sh
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/proteinbox/: test_alphafold.py  test_api_tools.py  test_blast.py  test_interpro.py  test_kegg.py  test_literature_models.py  (+8 more)
tui/: package.json  tsconfig.json
(+148 files in other folders)
