[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "proteinclaw"
version = "0.1.1"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "litellm>=1.40",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
]

[project.scripts]
proteinclaw = "proteinclaw.cli:main"

[project.urls]
Homepage = "https://github.com/EvoScientist/ProteinClaw"
Repository = "https://github.com/EvoScientist/ProteinClaw"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "httpx[ws]>=0.27",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
include = ["proteinclaw*", "proteinbox*"]

[tool.setuptools.package-data]
proteinclaw = ["resources/*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
