[package]
name = "proteinclaw-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proteinclaw-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
dirs = "5"

[dev-dependencies]
tempfile = "3"

[[test]]
name = "smoke"
path = "tests/smoke.rs"
