[package]
name = "proteinclaw-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proteinclaw-tui"
path = "src/main.rs"

[dependencies]
ratatui        = "0.29"
crossterm      = "0.28"
tui-textarea   = { version = "0.7", features = ["crossterm"] }
tokio          = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util   = "0.3"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
toml           = "0.8"
dirs           = "5"
pulldown-cmark = "0.13"
anyhow         = "1"
