[package]
name = "cli-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proteinclaw"
path = "src/main.rs"

[dependencies]
anyhow = "1"
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
toml = "0.8"
tui-textarea = "0.7"
pulldown-cmark = "0.12"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
